--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
         <!-- endbower -->
         <!-- endbuild -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
